# Helpdesk-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRE_SUBMISSION_CHECKLIST.txt  QUICKSTART.md  README.md  READY_FOR_SUBMISSION.md  SUBMISSION_CHECKLIST.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: baseline.py  ping_space.py  validate_openenv.py
server/: app.py
src/helpdesk_openenv/: env.py  graders.py  models.py  tasks.py
src/helpdesk_openenv/cli/: baseline.py  validate.py
