 [project]
 name = "helpdesk-openenv"
 version = "0.1.0"
 description = "A real-world OpenEnv environment: IT helpdesk triage, routing, and response drafting."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.7",
   "pyyaml>=6.0.1",
   "numpy>=1.26",
   "openai>=1.40.0",
   "tenacity>=8.3.0",
   "gradio>=4.44.0",
  "uvicorn>=0.27.0",
  "fastapi>=0.100.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
baseline = "helpdesk_openenv.cli.baseline:main"
validate_openenv = "helpdesk_openenv.cli.validate:main"
server = "server.app:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helpdesk_openenv"]
